crates/dora-compiler/src/conversion/snapshots/dora_compiler__conversion__tests__op_builder.snap
---
source: crates/dora-compiler/src/conversion/tests.rs
expression: op
snapshot_kind: text
---
%c1_i32 = arith.constant 1 : i32
