crates/dora-compiler/src/conversion/snapshots/dora_compiler__conversion__tests__rewriter.snap
---
source: crates/dora-compiler/src/conversion/tests.rs
expression: op
snapshot_kind: text
---
module {
  func.func @add(%arg0: i32, %arg1: i32) -> i32 {
    %0 = arith.subi %arg0, %arg1 : i32
    %c0_i32 = arith.constant 0 : i32
    %1 = arith.subi %c0_i32, %0 : i32
    return %1 : i32
  }
}
