crates/dora-compiler/src/conversion/snapshots/dora_compiler__conversion__tests__walker_with_rewriter.snap
---
source: crates/dora-compiler/src/conversion/tests.rs
expression: op
snapshot_kind: text
---
module {
  func.func @add(%arg0: i32, %arg1: i32) -> i32 {
    %c1_i32 = arith.constant 1 : i32
    %c2_i32 = arith.constant 2 : i32
    %c3_i32 = arith.constant 3 : i32
    %0 = arith.muli %c1_i32, %c2_i32 : i32
    %1 = arith.muli %0, %c3_i32 : i32
    %c0_i32 = arith.constant 0 : i32
    %c1_i32_0 = arith.constant 1 : i32
    %c2_i32_1 = arith.constant 2 : i32
    %c3_i32_2 = arith.constant 3 : i32
    %2 = arith.divsi %c1_i32_0, %c2_i32_1 : i32
    %3 = arith.muli %2, %c3_i32_2 : i32
    return %3 : i32
  }
}
